test/exercises/c-ray/c-ray.comptimeErrors.compopts
-M forStudents -spixelType=int(8)  # c-ray.toosmall.good
-M forStudents -spixelType=real    # c-ray.noreal.good
